css/main.css
/* ... */
.nav-menu ul li:hover > a {
  color: #8490ff;
}

.nav-menu ul ul {
  margin-right: 10px;
  margin-top: 0;
}

/* Mobile Nav Toggle */
#mobile-nav-toggle {
  position: fixed;
  right: 15px;
  z-index: 999;
  top: 22px;
  border: 0;
  background: none;
  font-size: 24px;
  display: none;
  transition: all 0.4s;
  outline: none;
  cursor: pointer;
}

#mobile-nav-toggle i {
  color: #222;
  font-weight: 900;
}

@media (max-width: 991px) {
  #mobile-nav-toggle {
    display: inline;
  }
  #nav-menu-container {
    display: none;
  }
}

/* Mobile Nav Styling */
#mobile-nav {
  position: fixed;
  top: 0;
  padding-top: 18px;
  bottom: 0;
  z-index: 998;
  background: rgba(0, 0, 0, 0.8);
  left: -260px;
  width: 260px;
  overflow-y: auto;
  transition: 0.4s;
}

#mobile-nav ul {
  padding: 0;
  margin: 0;
  list-style: none;
}

#mobile-nav ul li {
  position: relative;
}

#mobile-nav ul li a {
  color: #fff;
  font-size: 13px;
  text-transform: uppercase;
  overflow: hidden;
  padding: 10px 22px 10px 15px;
  position: relative;
  text-decoration: none;
  width: 100%;
  display: block;
  outline: none;
  font-weight: 400;
}

#mobile-nav ul li a:hover {
  color: #fff;
}

#mobile-nav ul li li {
  padding-left: 30px;
}

#mobile-nav ul .menu-has-children i {
  position: absolute;
  right: 0;
  z-index: 99;
  padding: 15px;
  cursor: pointer;
  color: #fff;
}

#mobile-nav ul .menu-has-children i.fa-chevron-up {
  color: #8490ff;
}

#mobile-nav ul .menu-has-children li a {
  text-transform: none;
}

#mobile-nav ul .menu-item-active {
  color: #8490ff;
}

#mobile-body-overly {
  width: 100%;
  height: 100%;
  z-index: 997;
  top: 0;
  left: 0;
  position: fixed;
  background: rgba(0, 0, 0, 0.7);
  display: none;
}

/* Mobile Nav body classes */
body.mobile-nav-active {
  overflow: hidden;
}

body.mobile-nav-active #mobile-nav {
  left: 0;
}

body.mobile-nav-active #mobile-nav-toggle {
  color: #fff;
}

/* =================================== */
/*  Homepage Styles
/* =================================== */
.section-gap {
  padding: 120px 0;
}

.alert-msg {
  color: #008000;
}

.p1-gradient-bg, .banner-left .primary-btn, .home-about-right .primary-btn, .facts-area, .thumb .overlay-bg, .price-area .single-price:hover, .brands-area, .about-banner, .sb_bar {
  background: -moz-linear-gradient(0deg, #8490ff 0%, #62bdfc 100%);
  background: -webkit-linear-gradient(0deg, #8490ff 0%, #62bdfc 100%);
  background: -ms-linear-gradient(0deg, #8490ff 0%, #62bdfc 100%);
}

.p1-gradient-color, .single-services:hover .lnr {
  background: -moz-linear-gradient(0deg, #8490ff 0%, #62bdfc 100%);
  background: -webkit-linear-gradient(0deg, #8490ff 0%, #62bdfc 100%);
  background: -ms-linear-gradient(0deg, #8490ff 0%, #62bdfc 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.primary-btn {
  background: #8490ff;
  line-height: 42px;
  padding-left: 30px;
  padding-right: 30px;
  border: none;
  color: #fff;
  display: inline-block;
  font-weight: 500;
  position: relative;
  -webkit-transition: all 0.3s ease 0s;
  -moz-transition: all 0.3s ease 0s;
  -o-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
  cursor: pointer;
  position: relative;
}

.primary-btn:focus {
  outline: none;
}

.primary-btn span {
  color: #fff;
  position: absolute;
  top: 50%;
  transform: translateY(-60%);
  right: 30px;
  -webkit-transition: all 0.3s ease 0s;
  -moz-transition: all 0.3s ease 0s;
  -o-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
}

.primary-btn:hover {
  color: #fff;
}

.primary-btn:hover span {
  color: #fff;
  right: 20px;
}

.primary-btn.white {
  border: 1px solid #fff;
  color: #fff;
}

.primary-btn.white span {
  color: #fff;
}

.primary-btn.white:hover {
  background: #fff;
  color: #8490ff;
}

.primary-btn.white:hover span {
  color: #8490ff;
}

.primary-btn.wh {
  background: #fff;
  color: #222;
  text-transform: uppercase;
}

.primary-btn.wh:hover {
  background: #222;
  color: #fff;
}

.primary-btn.squire {
  border-radius: 0px !important;
  border: 1px solid transparent;
}

.primary-btn.squire:hover {
  border: 1px solid #fff;
  background: transparent;
  color: #fff;
}

.overlay {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
}

.section-title {
  text-align: center;
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 80px;
}

.section-title h1 {
  margin-bottom: 10px;
}

/*-------- Start Banner Area ------------*/
.banner-area {

  background-position: center;
  background-size: cover !important;
  opacity: 1;
}

.banner-area .fullscreen {
  height: 700px !important;
}

.banner-left h6 {
  text-transform: uppercase;
  font-weight: 400;
  letter-spacing: 2px;
}

.banner-left h1 {
  margin: 20px 0;
  font-size: 60px;
  text-transform: uppercase;
}

@media (max-width: 991px) {
  .banner-left h1 {
    font-size: 30px;
  }
}

.banner-left .primary-btn:hover {
  box-shadow: 0px 20px 20px 0px rgba(132, 144, 255, 0.3);
}

@media (max-width: 767px) {
  .banner-left {
    margin-top: 100px;
  }
}

.banner-right {
  text-align: right;
}

@media (max-width: 991px) {
  .banner-right {
    align-self: right !important;
  }
}

@media (max-width: 767px) {
  .banner-right {
    width: 70%;
    margin-left: auto;
    margin-right: auto;
    display: block;
  }
}

/*-------- End Banner Area ------------*/
/*-------- Start home-about Area ------------*/
.home-about-left h1{
  margin-top: 0px;
  text-transform: uppercase;
  font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

.home-about-left p{
  margin-top: 40px;
  margin-bottom: 30px;
  max-width: 445px;
  font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;

}

@media (max-width: 767px) {
  .home-about-right {
    margin-top: 30px;
  }
}

.home-about-right h6 {
  margin-bottom: 30px;
  text-transform: uppercase;
  font-weight: 400;
  font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}
/* ... */

